Add copyright notice and licensing information to utility classes
- Updated multiple utility classes to include a standardized copyright notice and licensing information.
- The changes were made to the following files:
  - DataSource.java
  - DatabaseManager.java
  - DemoScreenshotGenerator.java
  - DemoVideoGenerator.java
  - FaceDetector.java
  - FaceRecognition.java
  - FilmYoutubeTrailer.java
  - ImdbAPI.java
  - PaymentProcessor.java
  - Paymentuser.java
  - SignInGoogle.java
  - SignInMicrosoft.java
  - UserMail.java
  - UserPDF.java
  - UserSMSAPI.java
  - UIUtils.java
  - ValidationUtils.java